Compile against 2.3.0 (#1791)
* Add more compats

* Old props

* Add a metrow test

* Raise up

* Handle diff versions in compiler-tests setup

* Another

* Stale comment

* More flags

* Add integration tests to metrow test

* Compats

* Test samples against the matrix too

* Move isLocal to CompatContext

* Change 5437 to 5706

* weird

* consolidate actions setup

* Add boostrap to functional tests

* samples fixes

* Bunch of convention plugin consolidation

* Docs

* D'oh

* Source min kotlin version from mins

* Work around KT-82989

* sigh, gradle

* SIGH

* doc

* Docs

* tweak

* Fix message

* Don't gate that way

* Not on wasm

* Clean it up for now